app/components/Form/DatePicker.css
:root {
  --calendar-border: 1px solid var(--color-mono-gray-4);
}

.calendar {
  display: flex;
  width: 100%;
  flex-wrap: wrap;
  margin: 0;
}

.dropdown {
  width: auto;
  max-width: 320px;
  padding: 0 20px;
}

.inputField {
  cursor: pointer;
}

.header {
  display: flex;
  flex-direction: row;
  align-items: center;
  justify-content: space-between;
  font-size: 20px;
  text-align: center;
  padding: 10px;

  > h3 {
    flex: 3;
  }

  > * {
    flex: 1;
  }
}

.calendarItem {
  flex: 0 14.28571%;
  border-right: var(--calendar-border);
  border-bottom: var(--calendar-border);
  background: var(--color-white);
  text-align: center;
  font-size: 16px;
  padding: 5px;

  &:nth-child(7n + 1) {
    border-left: var(--calendar-border);
  }

  &:nth-child(-n + 7) {
    border-top: var(--calendar-border);
  }

  &:hover {
    background: var(--lego-color-gray-light);
  }
}

html[data-theme='dark'] .calendarItem {
  color: var(--lego-font-color);

  &:hover {
    background: var(--color-gray-2);
  }
}

.prevOrNextMonth {
  color: var(--color-mono-gray-2);
}

html[data-theme='dark'] .prevOrNextMonth {
  color: var(--color-mono-gray-4);
}

.selectedDate {
  font-weight: 700;
}

